# ocr_labeler

./: .gitignore  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONVENTIONS.md  DEVELOPMENT.md  MULTI_TAB_ARCHITECTURE.md  MVVM_REFACTOR_PLAN.md  Makefile  NICEGUI_ASYNC_REFACTOR.md  README.md  TODOs.md  install.ps1  install.sh  main.py  pyproject.toml  test.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml
docs/: THREADING_ARCHITECTURE.md  dev-local-upgrade-flow.md  overnight-2026-05-06-summary.md
docs/architecture/: README.md  doc-sync-tasks.md  gpu-deployment.md  nicegui-patterns.md  ocr-model-selection.md  pd-book-tools-model-alignment.md  threading-architecture.md  ui-action-buttons.md
docs/architecture/async/: affected-files.md  migration-patterns.md  overview.md
docs/architecture/multi-tab/: overview.md  pitfalls-and-debugging.md  state-hierarchy.md
docs/archive/research/: 2026-05-06-async-handler-races.md  2026-05-06-browser-test-selection-helpers.md  2026-05-06-notification-mixin-dedup.md  2026-05-06-toolbar-split-family.md  code-review-README.md  correction-plan.md  duplicated-code.md  review-architecture.md
docs/planning/: LABELING_STRATEGY.md  README.md  browser-ui-test-plan.md  image-overlay-layer-controls-plan.md  next-step.md  pd-book-tools-page-provenance-copilot-brief.md  persistence-session-cache-plan.md  persistence-word-line-derived-cache.md  user-persistence-metadata-schema.md
docs/planning/code-review/: correction-plan.md  duplicated-code.md  layer-violations.md  pd-book-tools-candidates.md  style-inconsistencies.md
docs/planning/mvvm/: implementation-guidelines.md  migration-and-metrics.md  overview-and-issues.md  refactor-phases.md  target-architecture.md
docs/planning/roadmap/: distribution-strategy.md  editing-core.md  enhanced-ui-matching.md  navigation-multi-page.md  overview.md  performance-polish.md  persistence-milestones.md  phase-3-editing-core.md  phases-4-to-6.md  phases-7-to-9.md  testing-documentation.md  training-validation-export.md
docs/plans/: LABELING_STRATEGY.md
docs/plans/roadmap/: enhanced-ui-matching.md  overview.md  performance-polish.md  persistence-milestones.md  testing-documentation.md
docs/review/: README.md  architecture.md  bugs.md  dead-code.md  found-gt-errors.md  iteration-plan.md  module-ratings.md
docs/review-notes/: 2026-05-06-keyboard-shortcuts-coverage.md  2026-05-06-monkeypatch-wiring-attempt.md  2026-05-06-notification-mixin-dedup.md  2026-05-06-ocr-config-modal-state-machine.md  2026-05-06-toolbar-split-family.md
docs/usage/: README.md  how-to-label-a-page.md  installing.md
ocr_labeler/: __init__.py  app.py  cli.py  local_state_cleanup.py  model.py  routing.py  view.py
ocr_labeler/models/: __init__.py  app_state_nicegui_binding.py  app_state_view_model.py  line_match_model.py  page_model.py  page_state_nicegui_binding.py  page_state_view_model.py  project.py  project_model.py  project_state_nicegui_binding.py  project_state_view_model.py  user_page_persistence.py  word_match.py  word_match_model.py  word_match_view_model.py
ocr_labeler/operations/: __init__.py
ocr_labeler/operations/export/: __init__.py  cli.py  doctr_export.py
ocr_labeler/operations/ocr/: __init__.py  image_utils.py  (+10 more)
ocr_labeler/services/: __init__.py  notification_service.py  service_locator.py
ocr_labeler/state/: __init__.py  app_state.py  ground_truth.py  page_loader.py  page_state.py  project_state.py
ocr_labeler/viewmodels/: __init__.py  main_view_model.py
ocr_labeler/views/: __init__.py  callbacks.py  content.py  header.py  image_tabs.py  main_view.py  page_controls.py  project_load_controls.py  project_view.py  tabs.py  text_tabs.py  word_match.py
pd_ocr_labeler/: __init__.py  app.py  cli.py  constants.py  local_state_cleanup.py  prefetch.py  routing.py
pd_ocr_labeler/models/: __init__.py  line_match_model.py  page_model.py  project_model.py  user_page_persistence.py  word_match_model.py
pd_ocr_labeler/operations/: __init__.py
pd_ocr_labeler/services/: __init__.py  notification_service.py
pd_ocr_labeler/state/: app_state.py  page_state.py  project_state.py
pd_ocr_labeler/viewmodels/: main_view_model.py
pd_ocr_labeler/views/: __init__.py  callbacks.py  main_view.py
tests/: conftest.py  test_app_logging.py  test_app_state.py  test_app_url_loading.py  test_ground_truth.py  test_line_operations.py  test_project_state.py  test_routing.py  test_save_page.py  test_ui_refactoring.py  test_word_match.py
tests/browser/: conftest.py  generate_test_fixtures.py  helpers.py  test_browser_smoke.py  test_home_page.py  test_image_tabs.py  test_keyboard_shortcuts.py  test_navigation.py  test_ocr_config_modal.py  test_page_actions.py  test_project_loading.py  test_session_isolation.py  test_source_folder_dialog.py  test_text_tabs.py  test_toolbar_line_actions.py  test_toolbar_page_actions.py  test_toolbar_paragraph_actions.py  test_toolbar_word_actions.py  test_word_edit_dialog.py  test_word_match.py  test_word_match_line_actions.py
tests/integration/: conftest.py  test_multi_tab_isolation.py  test_project_loading.py  test_url_routing.py
tests/models/: test_project.py
tests/ocr_labeler/: test_app_url_loading.py  test_cli.py  test_routing.py
tests/pd_ocr_labeler/: test_app_logging.py  test_app_url_loading.py  test_cli.py  test_routing.py
tests/state/: __init__.py  test_app_state.py  test_project_state.py
tests/views/: test_main_view.py  test_page_controls.py  test_save_page.py
(+179 files in other folders)
