[project]
name = "ocr-labeler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "nicegui>=2.22.2",
    "pd-book-tools>=0.1.0",
]

[project.scripts]
ocr-labeler-ui = "ocr_labeler.cli:main"

[build-system]
requires = [
    "hatchling"
]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ocr_labeler"]
include = [
    "ocr_labeler/fonts/DPSansMono.ttf",
]

[tool.uv.sources]
pd-book-tools = { path = "../pd-book-tools", editable = false }

# --- Coverage configuration (Option B) ---
[tool.coverage.run]
source = ["ocr_labeler"]
branch = true
omit = [
    "*/tests/*",
    "*/.venv/*",
    "*/site-packages/*",
]
concurrency = ["thread"]  # NiceGUI & timers may spawn threads

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 75
precision = 1
exclude_also = [
    "if __name__ == .__main__.:",
    "pragma: no cover",
    "raise NotImplementedError",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

# Optional: default pytest addopts to always collect coverage (can be overridden)
[tool.pytest.ini_options]
addopts = "--cov=labeler --cov-report=term-missing:skip-covered --cov-report=html"
