[project]
name = "ocr-labeler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "nicegui>=2.22.2",
    "pd-book-tools>=0.1.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "debugpy>=1.8.5",
    "ruff>=0.13.0",
    "pytest-cov>=7.0.0",
]
test = [
    "pytest>=8.4.1",
    "coverage>=7.0",
    "pytest-cov>=7.0.0",
    "pytest-asyncio>=1.2.0",
    "pytest-mock>=3.15.0",
]
all-dev = [
    {include-group = "dev"},
    {include-group = "test"},
]

[project.scripts]
ocr-labeler-ui = "ocr_labeler.cli:main"

[build-system]
requires = [
    "hatchling"
]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ocr_labeler"]
include = [
    "ocr_labeler/fonts/DPSansMono.ttf",
]

[tool.uv.sources]
pd-book-tools = { path = "../pd-book-tools", editable = false }

[tool.coverage.run]
source = ["ocr_labeler"]
branch = true
omit = [
    "*/tests/*",
    "*/.venv/*",
    "*/site-packages/*",
]
concurrency = ["thread"]  # NiceGUI & timers may spawn threads

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 0  # disabled for now per request
precision = 1
exclude_also = [
    "if __name__ == .__main__.:",
    "pragma: no cover",
    "raise NotImplementedError",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

# Optional: default pytest addopts to always collect coverage (can be overridden)
[tool.pytest.ini_options]
addopts = "--cov=ocr_labeler --cov-report=term-missing:skip-covered --cov-report=html"
filterwarnings = [
    # Suppress deprecation warning from vbuild using deprecated pkgutil.find_loader (Python 3.13 -> removed 3.14)
    "ignore:'pkgutil.find_loader' is deprecated and slated for removal in Python 3.14:DeprecationWarning:vbuild",
]
